# gcloud-aio

./: .buildinfo  .gitignore  .pre-commit-config.rest.yaml  .pre-commit-config.yaml  .python-version  LICENSE  README.md  README.rst  aio.html  app-data.js  codecov.yml  conf.py  gcloud.html  genindex.html  index.html  mypy.ini  nox.py  objects.inv  py-modindex.html  pyproject.toml  requirements.py3to2.txt  requirements.txt  rest.html  search.html  search.js  searchindex.js  setup.py
.circleci/: config.yml
.doctrees/: environment.pickle  index.doctree
.doctrees/.github/: CONTRIBUTING.doctree  RELEASE.doctree
.github/: CODEOWNERS  CONTRIBUTING.html  CONTRIBUTING.rst  PULL_REQUEST_TEMPLATE.md  RELEASE.html  RELEASE.rst  autoapproval.yml  config.yml  renovate.json  renovate.json5  settings.yml
TODO/: README.md  astate.py  taskmanager.py
_sources/: index.rst.txt
_sources/.github/: CONTRIBUTING.rst.txt  RELEASE.rst.txt
_static/css/: sizzle.css
aio/: datastore.html  index.html  kms.html  storage.html
aio/auth/: build_constants.html  iam.html  index.html  session.html  token.html  utils.html
aio/bigquery/: bigquery.html  dataset.html  index.html  job.html  table.html  utils.html
aio/datastore/: array.html  constants.html  datastore.html  datastore_operation.html  entity.html  filter.html  index.html  key.html  lat_lng.html  mutation.html  projection.html  property_order.html  query.html  value.html
aio/kms/: index.html  kms.html  utils.html
aio/pubsub/: index.html  metrics.html  metrics_agent.html  publisher_client.html  subscriber.html  subscriber_client.html  subscriber_message.html  utils.html
aio/storage/: blob.html  bucket.html  constants.html  index.html  storage.html
aio/taskqueue/: index.html  queue.html  utils.html
auth/: LICENSE  MANIFEST.in  README.rst  nox.py  noxfile.py  noxfile.rest.py  pyproject.rest.toml  pyproject.toml  requirements.test.txt  requirements.txt  setup.py
auth/gcloud/: __init__.py
auth/gcloud/aio/: __init__.py
auth/gcloud/aio/auth/: __init__.py  auth.py  build_constants.py  core.py  iam.py  session.py  token.py  utils.py
auth/tests/integration/: conftest.py  smoke_test.py
auth/tests/unit/: auth_test.py  iam_test.py  sessions_test.py  token_test.py  utils_test.py
autoapi/auth/: index.html
autoapi/bigquery/: index.html
autoapi/datastore/: index.html
autoapi/kms/: index.html
autoapi/pubsub/: index.html
autoapi/storage/: index.html
autoapi/taskqueue/: index.html
bigquery/: README.rst  nox.py  noxfile.py  noxfile.rest.py  pyproject.rest.toml  pyproject.toml  requirements.txt  setup.py
bigquery/gcloud/aio/: __init__.py
bigquery/gcloud/aio/bigquery/: __init__.py  bigquery.py  dataset.py  job.py  table.py  utils.py
bigquery/tests/integration/: conftest.py  smoke_test.py
bigquery/tests/unit/: bigquery_test.py  utils_test.py
core/: README.rst  nox.py  requirements.txt  setup.py
datastore/: MANIFEST.in  README.rst  nox.py  noxfile.py  noxfile.rest.py  pyproject.rest.toml  pyproject.toml  requirements.txt  setup.py
datastore/gcloud/aio/datastore/: __init__.py  array.py  constants.py  datastore.py  datastore_operation.py  entity.py  filter.py  key.py  lat_lng.py  mutation.py  options.py  projection.py  property_order.py  query.py  query_explain.py  response.py  transaction_options.py  utils.py  value.py
datastore/tests/integration/: conftest.py  smoke_test.py  value_types_test.py
datastore/tests/unit/: constants_test.py  datastore_test.py  filter_test.py  gql_query_test.py  lat_lng_test.py  post_test.py  property_order_test.py  query_explain_test.py  query_test.py  value_test.py
docs/: aio.md  gcloud.md  rest.md
gcloud/: aio.html  rest.html
gcloud/aio/: auth.html  bigquery.html  datastore.html  kms.html  pubsub.html  storage.html  taskqueue.html
gcloud/rest/: auth.html  bigquery.html  datastore.html  kms.html  pubsub.html  storage.html  taskqueue.html
kms/: LICENSE  MANIFEST.in  README.rst  nox.py  noxfile.py  noxfile.rest.py  pyproject.rest.toml  pyproject.toml  requirements.txt  setup.py
kms/gcloud/aio/kms/: __init__.py  kms.py  utils.py
kms/tests/unit/: kms_test.py
pubsub/: README.rst  nox.py  noxfile.py  noxfile.rest.py  pyproject.rest.toml  pyproject.toml  requirements.txt  setup.py
pubsub/gcloud/aio/pubsub/: __init__.py  client.py  metrics.py  metrics_agent.py  publisher_client.py  subscriber.py  subscriber_client.py  subscriber_message.py  subscription.py  topic.py  utils.py
pubsub/tests/integration/: conftest.py  constructor_test.py  smoke_test.py
pubsub/tests/unit/: client_test.py  publisher_test.py  subscriber_test.py  subscription_test.py  topic_test.py
rest/: bigquery.html  index.html
rest/auth/: build_constants.html  iam.html  index.html  session.html  (+2 more)
storage/: README.rst  nox.py  noxfile.py  noxfile.rest.py  pyproject.rest.toml  pyproject.toml  requirements.dev.in  requirements.txt  setup.py
storage/gcloud/aio/storage/: __init__.py  blob.py  bucket.py  constants.py  storage.py  utils.py
storage/tests/integration/: compose_test.py  conftest.py  download_range_test.py  download_stream_test.py  get_buckets_test.py  list_buckets_test.py  metadata_test.py  signed_url_test.py  smoke_test.py  test_upload_resumable.py  upload_multipart_test.py  upload_resumable_test.py
storage/tests/unit/: blob_test.py  bucket_test.py  storage_test.py  upload_retry_test.py  utils_test.py
stubs/: backoff.pyi
taskqueue/: README.rst  nox.py  noxfile.py  noxfile.rest.py  pyproject.rest.toml  pyproject.toml  requirements.txt  setup.py
taskqueue/gcloud/: __init__.py
taskqueue/gcloud/aio/taskqueue/: __init__.py  basequeue.py  error.py  pullqueue.py  pushqueue.py  queue.py  something.py  taskmanager.py  taskqueue.py  utils.py
taskqueue/tests/integration/: conftest.py  pullqueue_test.py  pushqueue_test.py  smoke_test.py  taskmanager_test.py  taskqueue_test.py
taskqueue/tests/unit/: dummy_test.py  error_test.py  pullqueue_test.py  pushqueue_test.py  queue_test.py  taskmanager_test.py  taskqueue_test.py  utils_test.py
vision/: LICENSE  MANIFEST.in  README.rst  setup.py
(+191 files in other folders)
