[tool.poetry]
name = "gcloud-rest"
version = "0.0.0"
description = "Meta package for building gcloud-rest    "

authors = ["Vi Engineering <voiceai-eng@dialpad.com>"]

[tool.poetry.dependencies]
python = ">= 3.6, < 4.0"

[tool.poetry.dev-dependencies]
future = "0.18.2"
future-fstrings = { version = "1.2.0", extras = ["rewrite"] }
strip-hints = "0.1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
