[tool.poetry]
name = "gcloud-rest"
version = "0.0.0"
description = "Meta package for building gcloud-rest"

authors = ["Vi Engineering <voiceai-eng@dialpad.com>"]

[tool.poetry.dependencies]
python = ">= 3.7, < 4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
