[tool.poetry]
name = "gcloud-aio-auth"
version = "4.2.3"
description = "Python Client for Google Cloud Auth"
readme = "README.rst"

repository = "https://github.com/talkiq/gcloud-aio"
authors = ["Vi Engineering <voiceai-eng@dialpad.com>"]
license = "MIT"

packages = [
    { include = "gcloud" },
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Internet',
]

[tool.poetry.dependencies]
python = ">= 3.8, < 4.0"
aiohttp = "3.8.5"
backoff = "2.2.1"
chardet = "5.2.0"
cryptography = "41.0.3"
pyjwt = "2.8.0"
# requests = ">= 2.2.1, < 3.0.0"

[tool.poetry.dev-dependencies]
pytest = "7.4.2"
pytest-asyncio = "0.21.1"
pytest-mock = "3.11.1"

[tool.pytest.ini_options]
# addopts = "-Werror"  # TODO: fixme
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
