[tool.poetry]
name = "gcloud-aio-auth"
version = "5.1.0"
description = "Python Client for Google Cloud Auth"
readme = "README.rst"

repository = "https://github.com/talkiq/gcloud-aio"
authors = ["Vi Engineering <voiceai-eng@dialpad.com>"]
license = "MIT"

packages = [
    { include = "gcloud" },
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Internet',
]

[tool.poetry.dependencies]
python = ">= 3.8, < 4.0"
aiohttp = ">= 3.3.0, < 4.0.0"
backoff = ">= 1.0.0, < 3.0.0"
chardet = ">= 2.0, < 6.0"
# See https://cryptography.io/en/latest/api-stability/#deprecation
cryptography = ">= 2.0.0, < 44.0.0"  # pin max to < (major + 3)
pyjwt = ">= 1.5.3, < 3.0.0"
# requests = ">= 2.2.1, < 3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">= 4.0.0, < 8.0.0"
pytest-asyncio = ">= 0.16.0, < 0.22.0"
pytest-mock = ">= 2.0.0, < 4.0.0"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[tool.pytest.ini_options]
# addopts = "-Werror"  # TODO: fixme
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
