[tool.poetry]
name = "gcloud-aio-bigquery"
version = "6.3.0"
description = "Python Client for Google Cloud BigQuery"
readme = "README.rst"

repository = "https://github.com/talkiq/gcloud-aio"
authors = ["Vi Engineering <voiceai-eng@dialpad.com>"]
license = "MIT"

packages = [
    { include = "gcloud" },
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Internet',
]

[tool.poetry.dependencies]
python = ">= 3.8, < 4.0"
gcloud-aio-auth = "4.2.3"

[tool.poetry.dev-dependencies]
gcloud-aio-auth = { path = "../auth" }
gcloud-aio-datastore = { path = "../datastore" }
gcloud-aio-storage = { path = "../storage" }
pytest = "7.4.2"
pytest-asyncio = "0.21.1"
pytest-mock = "3.11.1"
# TODO: this should be inherited from gcloud-aio-storage, but it seems to be
# skipped for py2 rest testing:
# https://app.circleci.com/pipelines/github/talkiq/gcloud-aio/1769/workflows/5099f442-b4b2-48bc-bff2-77fb0cce993a/jobs/36773
rsa = [
    { version = ">= 3.1.4, < 4.4.0", python = "<3.0" },
    { version = ">= 3.1.4, < 5.0.0", python = ">=3.7" },
]

[tool.pytest.ini_options]
# addopts = "-Werror"  # TODO: fixme
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
