[tool.poetry]
name = "gcloud-aio-bigquery"
version = "7.1.0"
description = "Python Client for Google Cloud BigQuery"
readme = "README.rst"

repository = "https://github.com/talkiq/gcloud-aio"
authors = ["Vi Engineering <voiceai-eng@dialpad.com>"]
license = "MIT"

packages = [
    { include = "gcloud" },
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Internet',
]

[tool.poetry.dependencies]
python = ">= 3.8, < 4.0"
gcloud-aio-auth = ">= 3.1.0, < 6.0.0"

[tool.poetry.group.dev.dependencies]
gcloud-aio-auth = { path = "../auth" }
gcloud-aio-datastore = { path = "../datastore" }
gcloud-aio-storage = { path = "../storage" }
pytest = "8.0.0"
pytest-asyncio = "0.23.5"
pytest-mock = "3.12.0"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[tool.pytest.ini_options]
# addopts = "-Werror"  # TODO: fixme
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
