[tool.poetry]
name = "gcloud-aio-datastore"
version = "8.0.0"
description = "Python Client for Google Cloud Datastore"
readme = "README.rst"

repository = "https://github.com/talkiq/gcloud-aio"
authors = ["Vi Engineering <voiceai-eng@dialpad.com>"]
license = "MIT"

packages = [
    { include = "gcloud" },
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Internet',
]

[tool.poetry.dependencies]
python = ">= 3.8, < 4.0"
gcloud-aio-auth = ">= 3.1.0, < 6.0.0"

[tool.poetry.dev-dependencies]
aiohttp = ">= 3.3.0, < 4.0.0"
gcloud-aio-auth = { path = "../auth" }
gcloud-aio-storage = { path = "../storage" }
pytest = ">= 4.0.0, < 8.0.0"
pytest-asyncio = ">= 0.16.0, < 0.22.0"
pytest-mock = ">= 2.0.0, < 4.0.0"

[tool.pytest.ini_options]
# addopts = "-Werror"  # TODO: fixme
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
