[tool.poetry]
name = "gcloud-aio-kms"
version = "4.2.0"
description = "Python Client for Google Cloud KMS"
readme = "README.rst"

repository = "https://github.com/talkiq/gcloud-aio"
authors = ["Vi Engineering <voiceai-eng@dialpad.com>"]
license = "MIT"

packages = [
    { include = "gcloud" },
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Internet',
]

[tool.poetry.dependencies]
python = ">= 3.8, < 4.0"
gcloud-aio-auth = "4.2.3"

[tool.poetry.dev-dependencies]
gcloud-aio-auth = { path = "../auth" }
pytest = "7.4.2"

[tool.pytest.ini_options]
addopts = "-Werror"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
