[tool.poetry]
name = "gcloud-aio-pubsub"
version = "5.2.0"
description = "Python Client for Google Cloud Pub/Sub"
readme = "README.rst"

repository = "https://github.com/talkiq/gcloud-aio"
authors = ["Vi Engineering <voiceai-eng@dialpad.com>"]
license = "MIT"

packages = [
    { include = "gcloud" },
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Internet',
]

[tool.poetry.dependencies]
python = ">= 3.7, < 4.0"
gcloud-aio-auth = ">= 3.3.0, < 5.0.0"
prometheus-client = ">= 0.13.1, < 1.0.0"
setuptools = [
    # TODO: once we drop py2.7 support, we can upgrade to PEP 420 namespace packages
    { version = "44.1.0", python = "<3.0" },
    { version = ">= 66.0.0, <67.0.0", python = ">=3.7" },
]

[tool.poetry.dev-dependencies]
aiohttp = ">= 3.3.0, < 4.0.0"
gcloud-aio-auth = { path = "../auth" }
pytest = ">= 4.0.0, < 8.0.0"
pytest-asyncio = ">= 0.16.0, < 0.21.1"
pytest-mock = ">= 2.0.0, < 4.0.0"

[tool.pytest.ini_options]
# addopts = "-Werror"  # TODO: fixme
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
