[tool.poetry]
name = "gcloud-aio-pubsub"
version = "6.0.1"
description = "Python Client for Google Cloud Pub/Sub"
readme = "README.rst"

repository = "https://github.com/talkiq/gcloud-aio"
authors = ["Vi Engineering <voiceai-eng@dialpad.com>"]
license = "MIT"

packages = [
    { include = "gcloud" },
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Internet',
]

[tool.poetry.dependencies]
python = ">= 3.8, < 4.0"
gcloud-aio-auth = ">= 3.3.0, < 6.0.0"
prometheus-client = ">= 0.13.1, < 1.0.0"

[tool.poetry.group.dev.dependencies]
aiohttp = "3.9.1"
gcloud-aio-auth = { path = "../auth" }
pytest = "8.1.1"
pytest-asyncio = "0.23.5"
pytest-mock = "3.12.0"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[tool.pytest.ini_options]
# addopts = "-Werror"  # TODO: fixme
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
