[tool.poetry]
name = "gcloud-aio-storage"
version = "7.0.1"
description = "Python Client for Google Cloud Storage"
readme = "README.rst"

repository = "https://github.com/talkiq/gcloud-aio"
authors = ["Vi Engineering <voiceai-eng@dialpad.com>"]
license = "MIT"

packages = [
    { include = "gcloud" },
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Internet',
]

[tool.poetry.dependencies]
python = ">= 3.6, < 4.0"
aiofiles = ">= 0.6.0, < 1.0.0"
gcloud-aio-auth = ">= 3.6.0, < 5.0.0"
pyasn1-modules = ">= 0.2.1, < 0.3.0"
rsa = [
    { version = ">= 3.1.4, < 4.4.0", python = "<3.0" },
    { version = ">= 3.1.4, < 4.6.0", python = ">=3.0,<3.6" },
    { version = ">= 3.1.4, < 5.0.0", python = ">=3.6" },
]

[tool.poetry.dev-dependencies]
gcloud-aio-auth = { path = "../auth" }
pytest = ">= 4.0.0, < 8.0.0"
pytest-asyncio = ">= 0.16.0, < 0.19.1"
pytest-mock = ">= 2.0.0, < 4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
