[tool.poetry]
name = "gcloud-aio-storage"
version = "8.2.1a0"
description = "Python Client for Google Cloud Storage"
readme = "README.rst"

repository = "https://github.com/talkiq/gcloud-aio"
authors = ["Vi Engineering <voiceai-eng@dialpad.com>"]
license = "MIT"

packages = [
    { include = "gcloud" },
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Internet',
]

[tool.poetry.dependencies]
python = ">= 3.7, < 4.0"
aiofiles = ">= 0.6.0, < 24.0.0"
gcloud-aio-auth = ">= 3.6.0, < 5.0.0"
pyasn1-modules = ">= 0.2.1, < 0.3.0"
rsa = ">= 3.1.4, < 5.0.0"
setuptools = ">= 66.0.0, < 67.0.0"  # TODO: upgrade to PEP 420 namespace packages

[tool.poetry.dev-dependencies]
gcloud-aio-auth = { path = "../auth" }
pytest = ">= 4.0.0, < 8.0.0"
pytest-asyncio = ">= 0.16.0, < 0.22.0"
pytest-mock = ">= 2.0.0, < 4.0.0"

[tool.pytest.ini_options]
# addopts = "-Werror"  # TODO: fixme
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
