[tool.poetry]
name = "gcloud-aio-storage"
version = "9.4.0"
description = "Python Client for Google Cloud Storage"
readme = "README.rst"

repository = "https://github.com/talkiq/gcloud-aio"
authors = ["Vi Engineering <voiceai-eng@dialpad.com>"]
license = "MIT"

packages = [
    { include = "gcloud" },
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Internet',
]

[tool.poetry.dependencies]
python = ">= 3.9, < 4.0"
aiofiles = ">= 0.6.0, < 25.0.0"
gcloud-aio-auth = ">= 5.3.0, < 6.0.0"
pyasn1-modules = ">= 0.2.1, < 0.4.2"
rsa = ">= 3.1.4, < 5.0.0"

[tool.poetry.group.dev.dependencies]
gcloud-aio-auth = { path = "../auth" }
pytest = "8.3.5"
pytest-asyncio = "0.25.3"
pytest-mock = "3.14.0"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[tool.pytest.ini_options]
# addopts = "-Werror"  # TODO: fixme
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
