[tool.poetry]
name = "gcloud-aio-taskqueue"
version = "6.1.0"
description = "Python Client for Google Cloud Task Queue"
readme = "README.rst"

repository = "https://github.com/talkiq/gcloud-aio"
authors = ["Vi Engineering <voiceai-eng@dialpad.com>"]
license = "MIT"

packages = [
    { include = "gcloud" },
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Internet',
]

[tool.poetry.dependencies]
python = ">= 3.8, < 4.0"
gcloud-aio-auth = "4.2.3"

[tool.poetry.dev-dependencies]
aiohttp = "3.8.5"
gcloud-aio-auth = { path = "../auth" }
pytest = "7.4.2"
pytest-asyncio = "0.21.1"
pytest-mock = "3.11.1"

[tool.pytest.ini_options]
addopts = "-Werror"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
